--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    \n",
+    "    distance(first_neighbor,second_nei)\n",
     "    return second_neighbor"
    ]
   },
