--- a/index.ipynb
+++ b/index.ipynb
@@ -438,6 +438,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    dist= distance(first_neighbor,second_neighbor)\n",
+    "    second_neighbor\n",
     "    return second_neighbor"
    ]
   },
