--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,8 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    newneighbors=[]\n",
-    "    for neigh in n ei\n",
+    "    for neigh in neighbors:\n",
+    "        d\n",
     "    pass"
    ]
   },
