Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,9 +477,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    newneighbors=[]\n",
+    "    newneighbors=\n",
     "    for neigh in neighbors:\n",
-    "        d\n",
+    "        dist\n",
     "    pass"
    ]
   },
