Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    newneighbors= neigh\n",
+    "    newneighbors= neighbors - fist_neighbor\n",
+    "    ne\n",
     "    for neigh in neighbors:\n",
     "        dist\n",
     "    pass"
