--- a/index.ipynb
+++ b/index.ipynb
@@ -478,9 +478,9 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    newneighbors= neighbors - fist_neighbor\n",
-    "    n\n",
-    "    for neigh in neighbors:\n",
-    "        dist\n",
+    "    return newneighbors\n",
+    "    #for neigh in neighbors:\n",
+    "       # dist\n",
     "    pass"
    ]
   },
