Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    newneighbors = neighbors - fist_neighbor\n",
-    "    return newneighbors\n",
+    "    return newn\n",
     "    #for neigh in neighbors:\n",
     "       # dist\n",
     "    #pass"
