Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -475,8 +475,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    newn = neighbors - fist_neighbor\n",
-    "    #for neigh in neighbors:\n",
+    "    newn = [];\n",
+    "    for neigh in neighbors:\n",
     "       # dist\n",
     "    #pass"
    ]
