--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -477,7 +477,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
-    "        dist = distance (first_neighbor)\n",
+    "        dist = distance\n",
     "    #pass"
    ]
   },
