Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,8 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
-    "        dist = distance (first_neighbor, neighbors)\n",
+    "        dist = distance (first_neighbor, neigh)\n",
+    "        \n",
     "    #pass"
    ]
   },
