--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
     "        dist = distance (first_neighbor, neigh)\n",
-    "        \n",
+    "        neigh\n",
     "    #pass"
    ]
   },
