Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
     "    for neigh in neighbors:\n",
     "        dist = distance (first_neighbor, neigh)\n",
     "        neigh['distance'] = dist\n",
-    "        \n",
+    "        newn.append(neigh)\n",
     "    #pass"
    ]
   },
