--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
     "        dist = distance (first_neighbor, neigh)\n",
     "        neigh['distance'] = dist\n",
     "        newn.append(neigh)\n",
-    "       "
+    "    return newn"
    ]
   },
   {
