--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
-    "        if neigh []\n",
+    "        if neigh ['di']\n",
     "        dist = distance (first_neighbor, neigh)\n",
     "        neigh['distance'] = dist\n",
     "        newn.append(neigh)\n",
