Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,8 +477,8 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
-    "        if neigh ['di']\n",
     "        dist = distance (first_neighbor, neigh)\n",
+    "        if dist > 0\n",
     "        neigh['distance'] = dist\n",
     "        newn.append(neigh)\n",
     "    return newn"
