--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -470,15 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-332117b0a6d9>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-30-fe5233ced980>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-332117b0a6d9>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    if int(dist) > 0\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-fe5233ced980>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    if dist > 0\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -487,7 +487,7 @@
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
     "        dist = distance (first_neighbor, neigh)\n",
-    "        if int(dist) > 0\n",
+    "        if dist > 0\n",
     "            neigh['distance'] = dist\n",
     "            newn.append(neigh)\n",
     "    return newn"
