Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,24 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-332117b0a6d9>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-332117b0a6d9>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    if int(dist) > 0\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    newn = [];\n",
     "    for neigh in neighbors:\n",
     "        dist = distance (first_neighbor, neigh)\n",
-    "        if int(dist) > 0\n",
+    "        if dist > 0:\n",
     "            neigh['distance'] = dist\n",
     "            newn.append(neigh)\n",
     "    return newn"
@@ -495,21 +486,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
        " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
        " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
        " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
