--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distance_all(first_neighbor, neighbors)"
+    "    new=distance_all(first_neighbor, neighbors)"
    ]
   },
   {
