Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,14 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    new=distance_all(first_neighbor, neighbors)"
+    "    new = distance_all(first_neighbor, neighbors)\n",
+    "    return new"
    ]
   },
   {
