Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    new = distance_all(first_neighbor, neighbors)\n",
+    "    new\n",
+    "    old = distance_all(first_neighbor, neighbors)\n",
     "    return new"
    ]
   },
