Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,8 +528,9 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    new\n",
+    "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
+    "    \n",
     "    return new"
    ]
   },
