Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
-    "    \n",
+    "    for num in num\n",
     "    return new"
    ]
   },
