Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,7 @@
     "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
     "    for num in number\n",
-    "        new.append\n",
+    "        new.append(neighbors[new])\n",
     "    \n",
     "    return new"
    ]
