--- a/index.ipynb
+++ b/index.ipynb
@@ -531,8 +531,7 @@
     "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
     "    for num in number\n",
-    "        new.append(neighbors[new])\n",
-    "    \n",
+    "        new.append(neighbors[num])    \n",
     "    return new"
    ]
   },
