--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
-    "    for num in number:\n",
+    "    for  in :\n",
     "        new.append(num)    \n",
     "    return new"
    ]
