Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new =[]\n",
     "    old = distance_all(first_neighbor, neighbors)\n",
-    "    for 0 in 2 :\n",
+    "    for num in number\n",
     "        new.append(num)    \n",
     "    return new"
    ]
